--- a/account/build.gradle
+++ b/account/build.gradle
@@ -50,5 +50,9 @@ dependencies {
     implementation "io.insert-koin:koin-core:3.2.0-beta-1"
     implementation "io.insert-koin:koin-android:3.2.0-beta-1"
 
+    def nav_version = '2.4.0-alpha05'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     implementation project(":network")
 }
