--- a/home/build.gradle
+++ b/home/build.gradle
@@ -40,6 +40,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    def nav_version = '2.4.0-alpha05'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -52,4 +57,8 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.2.0-beta-1"
 
     implementation project(":network")
+    implementation project(":account")
+    implementation project(":match")
+    implementation project(":profile")
+    implementation project(":team")
 }
