--- a/players/build.gradle
+++ b/players/build.gradle
@@ -1,18 +1,17 @@
 plugins {
-    id "com.android.library"
-    id "kotlin-android"
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        minSdk 21
+        minSdk 23
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
-        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -40,11 +39,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
-    def nav_version = '2.4.0-alpha05'
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -56,10 +50,9 @@ dependencies {
     implementation "io.insert-koin:koin-core:3.2.0-beta-1"
     implementation "io.insert-koin:koin-android:3.2.0-beta-1"
 
+    def nav_version = '2.4.0-alpha05'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     implementation project(":network")
-    implementation project(":account")
-    implementation project(":match")
-    implementation project(":profile")
-    implementation project(":team")
-    implementation project(":players")
 }
