--- a/home/build.gradle
+++ b/home/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "com.android.library"
-    id "kotlin-android"
+    id "org.jetbrains.kotlin.android"
+    id "kotlin-kapt"
 }
 
 android {
@@ -34,46 +35,27 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerExtensionVersion '1.3.0'
     }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.6.10'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
+    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
     def nav_version = '2.4.0-alpha05'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    def retrofit_version = '2.9.0'
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
-
-    implementation "io.insert-koin:koin-core:3.2.0-beta-1"
-    implementation "io.insert-koin:koin-android:3.2.0-beta-1"
-
-    implementation 'io.insert-koin:koin-androidx-compose:3.1.2'
-
-    // Integration with activities
+    implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
-    // Compose Material Design
     implementation 'androidx.compose.material:material:1.1.1'
-    // Animations
     implementation 'androidx.compose.animation:animation:1.1.1'
-    // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling:1.1.1'
-    // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
     // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.1.1'
 
     implementation project(":network")
     implementation project(":design")
