--- a/network/build.gradle
+++ b/network/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-        buildConfigField "String", "BASE_URL", '"http://127.0.0.1:8000/api/"'
+        buildConfigField "String", "BASE_URL", '"http://10.0.2.2:8000/api/"'
     }
 
     buildTypes {
@@ -20,7 +20,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
-            buildConfigField "String", "BASE_URL", '"http://127.0.0.1:8000/api/"'
+//            buildConfigField "String", "BASE_URL", '"http://192.168.18.3/api/"'
 
         }
     }
