--- a/network/build.gradle
+++ b/network/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-        buildConfigField "String", "BASE_URL", '"http://10.0.2.2:8000/api/"'
+        buildConfigField "String", "BASE_URL", '"https://aclina.tech/api/"'
     }
 
     buildTypes {
