create data, domain and presentation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
 
     implementation project(":network")
     implementation project(":home")
+    implementation project(":players")
 }
