--- a/players/build.gradle
+++ b/players/build.gradle
@@ -30,6 +30,7 @@ android {
     buildFeatures {
         dataBinding true
         viewBinding true
+        compose true
     }
 }
 
@@ -49,6 +50,13 @@ dependencies {
 
     implementation "io.insert-koin:koin-core:3.2.0-beta-1"
     implementation "io.insert-koin:koin-android:3.2.0-beta-1"
+
+    implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.compose.animation:animation:1.1.1'
+    implementation 'androidx.compose.ui:ui-tooling:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
 
     def nav_version = '2.4.0-alpha05'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
