--- a/players/build.gradle
+++ b/players/build.gradle
@@ -32,6 +32,9 @@ android {
         viewBinding true
         compose true
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.0'
+    }
 }
 
 dependencies {
@@ -58,9 +61,14 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
 
+    implementation("com.github.skydoves:landscapist-coil:1.6.1")
+
     def nav_version = '2.4.0-alpha05'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation project(":network")
+    implementation project(":design")
+
+
 }
