--- a/home/build.gradle
+++ b/home/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'androidx.compose.animation:animation:1.1.1'
     implementation 'androidx.compose.ui:ui-tooling:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+    implementation("androidx.navigation:navigation-compose:$nav_version")
 
 
     implementation project(":network")
