--- a/design/build.gradle
+++ b/design/build.gradle
@@ -40,7 +40,12 @@ android {
 
 dependencies {
 
+    implementation 'androidx.compose.ui:ui-text-google-fonts:1.2.0-beta02'
+    implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
+    implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.compose.animation:animation:1.1.1'
     implementation 'androidx.compose.ui:ui-tooling:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
     implementation project(":network")
 }
