--- a/account/src/main/AndroidManifest.xml
+++ b/account/src/main/AndroidManifest.xml
@@ -6,17 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tournament">
         <activity
             android:windowSoftInputMode="adjustResize"
-            android:name="br.com.tournaments.account.AccountActivity"
+            android:name="br.com.tournaments.account.activity.AccountActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
