--- a/team/src/main/AndroidManifest.xml
+++ b/team/src/main/AndroidManifest.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.team">
+    package="br.com.tournaments.team">
 
-    <application>
-        <activity
-            android:name=".teamActivity"
-            android:exported="false"
-            android:label="@string/title_activity_team"
-            android:theme="@style/Theme.Tournament.NoActionBar" />
-    </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
