--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply from: '../config/detekt/detekt.gradle'
+
+
 android {
 
     compileSdk 32
